[package]
name = "orderbook-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.6", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }
scylla = "0.7.0"
bigdecimal = { version = "0.2.0", features = ["serde"] }
strum = "0.24.1"
strum_macros = "0.24.3"
